feat: 新增自定义存放壁纸目录